v0.8.4 - Add highlight matches on selection - Add annotation to scrollbar for selection/search matches - Fix infinite loop in code folding - Known Issue: folded matches are not annotated on scrollbar

--- a/MDbScriptTool/Content/app/css/app.less
+++ b/MDbScriptTool/Content/app/css/app.less
@@ -262,6 +262,26 @@ a.focus {
   &-scrollbar-filler {
     background-color: rgba(0, 0, 0, .2);
   }
+
+  .cm-matchhighlight {
+    background-color: rgba(247,97,30,.25);
+  }
+
+  .CodeMirror-selection-highlight-scrollbar {
+    background-color: rgba(251, 255, 0, 0.5);
+    border-top: 1px solid rgba(247, 180, 30, .5);
+    border-bottom: 1px solid rgba(247, 180, 30, .5);
+    box-sizing: border-box;
+    width: 10px !important;
+  }
+
+  .CodeMirror-search-match {
+    background-color: rgba(17, 230, 66, .5);
+    border-top: 1px solid rgba(255, 193, 7, .5);
+    border-bottom: 1px solid rgba(255, 193, 7, .5);
+    box-sizing: border-box;
+    width: 10px !important;
+  }
 }
 
 /** jQuery-contextMenu overrides */
